...
                  <ActivityIndicator color={colors.primaryContrast} />
                ) : (
                  <Text style={styles.buttonText}>{t("登录")}</Text>
                )}
              </TouchableOpacity>
              <TouchableOpacity accessibilityRole="button" style={styles.registerLink} onPress={() => router.push("/register")}>
                <Text style={styles.registerText}>{t("创建新账户")}</Text>
              </TouchableOpacity>
              <TouchableOpacity
                accessibilityRole="button"
                style={styles.registerLink}
                onPress={() => router.push("/recovery")}
              >
...
